# QQImpl

./: README.md
MMMojoCall/: CMakeLists.txt
MMMojoCall/examples/c#/: Program.cs
MMMojoCall/examples/cpp/: MMMojoCallWrapper.cpp  childipc_test.cpp  parentipc_test.cpp  xplugin_ocr_test.cpp  xplugin_player_test.cpp  xplugin_test.cpp  xplugin_utility_test.cpp
MMMojoCall/examples/java/: MMMojoCallUsage.java
MMMojoCall/examples/python/: mmmojo_call_usage.py
MMMojoCall/proto/: ocr_protobuf.proto  player_protobuf.proto  utility_protobuf.proto
MMMojoCall/src/: dllmain.cpp  utils.cpp
MMMojoCall/src/include/: MMMojoCallWrapper.h  mmmojo_call.h  mmmojo_ocr.h  mmmojo_player.h  mmmojo_utility.h  mojo_call_export.h  utils.h
MMMojoCall/src/include/mmmojo_source/: mmmojo.h  mmmojo_environment_callbacks.h
MMMojoCall/src/include/qq_mojoipc/: qq_ipc.h  qq_ipc_asm.h
MMMojoCall/src/include/xplugin_protobuf/: ocr_protobuf.pb.h  player_protobuf.pb.h  utility_protobuf.pb.h
MMMojoCall/src/mmmojocall/: mmmojo_call.cpp  mojo_call_export.cpp
MMMojoCall/src/mmmojocall/wrapper/: mmmojo_ocr.cpp  mmmojo_player.cpp  mmmojo_utility.cpp  ocr_protobuf.pb.cc  player_protobuf.pb.cc
MMMojoCall/src/qq_mojoipc/: qq_ipc.cpp  qq_ipc_asm.asm
MMMojoCall/src/wrapper/: mmmojo_call.cpp  mmmojo_ocr.cpp  mmmojo_utility.cpp  mojo_call_export.cpp  player_protobuf.pb.cc  utility_protobuf.pb.cc
MMMojoCall/swig/: mmmojo_call.i
QQImpl/: readme.md
QQImpl/QQIPC/: QQIpc.cpp  QQIpc.h  QQIpcAsm.h
QQImpl/QQImpl/: QQImpl32.cpp  QQImpl32.h  QQImpl64.cpp  QQImpl64.h  QQIpc64.asm  QQIpc64.h
QQImpl/QQOCR/: QQOcr.cpp  QQOcr.h  QQOcrAsm.asm
QQImpl/QQOCR/ocr_protobuf/: ocr_protobuf.pb.cc  ocr_protobuf.proto
QQImplDLL/: README.md
QQImplDLL/QQOcr/: QQOcr.sln
QQImplDLL/QQOcr/QQOcr/: QQOcr.cpp  QQOcr.h  QQOcr.vcxproj  QQOcr.vcxproj.filters  QQOcrAsm.h  dllmain.cpp  framework.h
QQImplDLL/QQOcr/depends/ocr_protobuf/: ocr_protobuf.pb.h
QQImplDLL/UsageExample/c++/: QQOcrUsage.sln
QQImplDLL/UsageExample/c++/QQOcrUsage/: QQOcrUsage.vcxproj  QQOcrUsage.vcxproj.filters  main.cpp
QQImplDLL/UsageExample/python/: main.py  ocr_protobuf_pb2.py
